--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -152,7 +152,7 @@ en:
         invalid_email_domain_read_more_link: "Read the knowledge base article for more information."
         unknown_error: "Something went wrong"
         white_label_offer: "Set your own email address as the sender and remove all Sharetribe branding from outgoing email messages by %{upgrade_pro_plan_link}."
-        upgrade_pro_plan_link: "upgrading to our Pro plan or higher"
+        upgrade_plan_link: "upgrading to our Pro plan or higher"
         verification_sent_from: "The verification email was sent from %{verification_sender_name}."
         follow_the_instructions: "Please follow the instructions in the email to verify your address."
       getting_started:
