--- a/config/locales/onboarding/de.yml
+++ b/config/locales/onboarding/de.yml
@@ -49,7 +49,7 @@ de:
             invitation: "Benutzer einladen"
           paypal:
             title: "Schritt 5: Zahlungssystem einrichten"
-            description_p1: "Wenn deine Anbieter Zahlungen für ihre Angebote annehmen können sollten, solltest du dein PayPal-konto verbinden (du bekommst eine Provision für jede Transaktion). Wenn du das Konto verbunden hast, kannst du den Mindestbetrag einer Transaktion und deine Transaktionsgebühr feststellen."
+            description_p1: "Wenn deine Anbieter Zahlungen für ihre Waren oder Dienstleistungen annehmen können sollten, solltest du dein PayPal-konto verbinden (du bekommst eine Provision für jede Transaktion). Sobald du das Konto verbunden hast, kannst du den Mindestbetrag einer Transaktion und deine Transaktionsgebühr feststellen."
             description_p2: "Wenn du willst, kannst du Online-Zahlungen auch fürs Erste deaktivieren."
             info_image_alt: "Ein Screenshot von der 'Zahlungssystem' -Seite"
             disable_payments: "Zahlungen deaktivieren"
@@ -65,7 +65,7 @@ de:
             info_image_alt: "Ein Screenshot von dem Homepage mit Slogan und Beschreibung."
             add_your_own: "Slogan & Beschreibung hinzufügen"
             advice:
-              content: "Verwende deinen Slogan um deinen Marktplatz schenll zu beschreiben. %{food_from_locals_slogan} oder %{guitar_lessons_slogan} sind gute Beispiele. Mit der Beschreibung kannst du ergänzen, wie dein Marktplatz für deine Kunden nützlich ist. %{food_from_locals_description} oder {guitar_lessons_description} sind gute Beispiele."
+              content: "Verwende deinen Slogan um deinen Marktplatz schnell zu beschreiben. %{food_from_locals_slogan} oder %{guitar_lessons_slogan} sind gute Beispiele. Mit der Beschreibung kannst du ergänzen, wofür dein Marktplatz nützlich ist. %{food_from_locals_description} oder %{guitar_lessons_description} sind gute Beispiele."
               food_from_locals_slogan: "\"Regionale lebensmittel kaufen\""
               guitar_lessons_slogan: "\"Gitarrenunterricht von einem Profi\""
               food_from_locals_description: "\"Durch FoodMarket kannst du einfach Produkte direkt von einheimischen Anbietern kaufen\""
@@ -76,11 +76,11 @@ de:
             description_p1: "Um deinen Marktplatz einzurichten, gibt es einige wichtige Schritte die du nehmen solltest. Die siehst du unten."
             description_p2: "Sobald du fertig bist, ist dein Marktplatz bereit für die ersten Kunden!"
             congratulation_p1:
-              content: "Du hast es geschafft! Dein Marktplatz ist eingerichtet. Das ist aber nur der Anfang. Du hast nur ein kleines Teil von den Anpassungsmöglichkeiten von Sharetribe gesehen. Um mehr Informationen über Personalisierung deines Marktplatzes zu bekommen, solltest du %{knowledge_base_link} ansehen. Die meisten Artikel sind leider zur Zeit nur auf Englisch verfügbar."
+              content: "Du hast es geschafft! Dein Marktplatz ist eingerichtet. Das ist aber nur der Anfang. Du hast nur ein kleines Teil von den Anpassungsmöglichkeiten von Sharetribe gesehen. Um mehr Informationen über die Anpassung deines Marktplatzes zu bekommen, solltest du %{knowledge_base_link} ansehen. Die meisten Artikel sind leider zur Zeit nur auf Englisch verfügbar."
               knowledge_base_link: "unseren Knowledge Base"
               knowledge_base_alt: "knowledge base"
             congratulation_p2:
-              content: "Wenn du mehr darüber lernen willst, wie man ein erfolgreiches Marktplatz-Geschäft führt, empfehlen wir den Artikel %{marketplace_guide_link} (Englisch)."
+              content: "Wenn du mehr darüber lernen willst, wie man ein erfolgreiches Marktplatz-Geschäft führt, empfehlen wir den Artikel %{marketplace_guide_link}. Leider ist dieser Artikel auch zur Zeit nur auf Englisch verfügbar."
               marketplace_guide_link: "Leitfaden für das erfolgreiche Aufbauen von Online Marktplatz-Geschäften"
               marketplace_guide_alt: "link to marketplace academy"
             congratulation_p3:
@@ -113,26 +113,26 @@ de:
           button: "Schreibe deine eigenen!"
         cover_photo:
           title: "Sehr gut! Aufgabe erledigt!"
-          body: "Gut gemacht, lass uns weitermachen! Ein gutes Titelbild hat einen sehr großen Einfluss auf den ersten Eindruck von deinem Marktplatz für neue Kunden. Es ist an der Zeit, dein eigenes hinzufügen!"
+          body: "Gut gemacht, lass uns weitermachen! Ein gutes Titelbild hat einen sehr großen Einfluss auf den ersten Eindruck von deinem Marktplatz für neue Kunden. Es ist an der Zeit, dein eigenes Titelbild hinzuzufügen!"
           button: "Titelbild hochladen"
         filter:
           title: "Sieht gut aus!"
           body: "Nun, konzentrieren wir uns auf die Funktionalität ein wenig. Eintragsfelder und Filter strukturieren deinen Marktplatz, und helfen deinen Kunden das zu finden, wonach sie suchen."
-          button: "Add fields & filters"
+          button: "FelDer & Filter hinzufügen"
         paypal:
           title: "Gut gemacht!"
-          body: "Als nächstes, solltest du das Bezahlungssystem für deinen Marktplatz einrichten! Um deinen Benutzern das Annehmen von Online-Zahlungen zu erlauben, solltest du dein PayPal-Konto verbinden. Alternativ kannst du auch Online-Bezahlungen fürs erste deaktivieren."
+          body: "Als nächstes solltest du das Bezahlungssystem für deinen Marktplatz einrichten! Um deinen Benutzern das Annehmen von Online-Zahlungen zu erlauben, solltest du dein PayPal-Konto verbinden. Alternativ kannst du auch Online-Bezahlungen fürs erste deaktivieren."
           button: "Zahlungssystem einrichten"
         listing:
           title: "Gute Arbeit!"
-          body: "Die Grundlagen deines Marktplatzes sind jetz eingerichtet, aber es sieht noch etwas leer aus. Es ist an der Zeit, die erste angebotene Ware oder Dienstleistung auf deinen Marktplatz hinzufügen."
+          body: "Die Grundlagen deines Marktplatzes sind jetz eingerichtet, aber es sieht hier noch etwas leer aus. Es ist an der Zeit, den ersten Eintrag auf deinen Marktplatz hinzuzufügen."
           button: "Deinen ersten Eintrag erstellen"
         invitation:
           title: "...und jetzt zum letzten Schritt - deinen Marktplatz veröffentlichen!"
-          body: "Bist du mit alles zufrieden? Dann lass uns Benutzer einladen!"
+          body: "Bist du mit allem zufrieden? Dann lass uns Benutzer einladen!"
           button: "Benutzer einladen"
         all_done:
           title: "Hervorragend - du hast es geschafft!"
-          body: "Fantastisch, du hast es geschafft! Dein Marktplatz ist jetz eingerichtet. Das ist aber nur der Enfang. Wir sind hier für dich, und wir helfen dir gerne bei jedem Schritt deiner Reise."
+          body: "Fantastisch, du hast es geschafft! Dein Marktplatz ist jetz eingerichtet. Das ist aber nur der Anfang. Wir sind für dich da, und wir helfen dir gerne bei jedem Schritt deiner Reise."
           button: "Siehe die nächsten Schritte"
         button_later: "Ich werde es später tun, danke"
