--- a/config/locales/pt-BR.yml
+++ b/config/locales/pt-BR.yml
@@ -864,7 +864,7 @@ pt-BR:
       or_paste_link: "Alternativamente, você pode copiar o seguinte link para a barra de endereços do seu navegador:"
       turning_on_confirmations_in_this_community: "Nós utilizamos um e-mail de confirmação nesse mercado virtual da %{service_name}."
     common:
-      hey: "Olá %{name}"
+      hey: "Oi %{name}"
       kassi_team: "Equipe %{service_name}"
       thanks: "Obrigado,"
       dont_want_to_receive_these_emails: "Você deseja receber e-mails?"
