--- a/config/locales/vi.yml
+++ b/config/locales/vi.yml
@@ -56,7 +56,7 @@ vi:
         update_information: "Lưu thiết lập."
         invite_people: ~
         edit_signup_info: "Thông tin đăng ký"
-        edit_signup_info_description: ~
+        edit_signup_info_description: "Thông tin này sẽ được hiển thị trên trang đăng nhập. Bạn có thể tận dụng dụng để thêm hướng dẫn đăng nhập, địa chỉ đăng kí v.v..."
         edit_info: ~
         see_how_it_looks_like: ~
         verification_to_post_listings_info_content: ~
@@ -80,15 +80,15 @@ vi:
         favicon_info_text: ~
         community_custom_color1: "Màu sắc chính"
         community_custom_color2: ~
-        logo_instructions_text_with_dimensions: ~
+        logo_instructions_text_with_dimensions: "Logo phải có kích thước %{width}x%{height}."
         logo_icon_instructions_text_with_dimensions: ~
         cover_photo_visibility: ~
-        cover_photo_instructions_text_with_dimensions: ~
+        cover_photo_instructions_text_with_dimensions: "Ảnh sẽ được thu nhỏ về kích thước %{width}x%{height} pixel. Những ảnh quá cao sẽ được cắt ngay giữa. %{see_how_it_looks_like}"
         small_cover_photo_visibility: ~
         small_cover_photo_instructions_text_with_dimensions: ~
         main_content_width: ~
-        custom_color1_instructions_text: ~
-        custom_color2_instructions_text: ~
+        custom_color1_instructions_text: "Bạn có thể thay đổi màu của giao diện người dùng bằng cách nhập một mã hex vào đây. <a href=\"http://www.colorpicker.com/?colorcode=D96E21\" target=\"_blank\" rel=\"noreferrer\">ColorPicker.com</a> sẽ đưa ra mã hex tương ứng vớ  màu bạn chọn."
+        custom_color2_instructions_text: "Bạn có thể thay đổi màu của nút %{post_new_listing} bằng cách nhập một mã hex vào đây. <a href=\"http://www.colorpicker.com/?colorcode=D96E21\" target=\"_blank\" rel=\"noreferrer\">ColorPicker.com</a> sẽ đưa ra mã hex tương ứng với màu bạn chọn."
         default_browse_view: ~
         default_browse_view_instructions_text: ~
         grid: ~
@@ -708,7 +708,7 @@ vi:
       cancel: ~
   braintree_accounts:
     new:
-      add_payout_details: ~
+      add_payout_details: "Thêm thông tin thanh toán"
       first_name: Tên
       last_name: Họ
       email: "Địa chỉ email"
@@ -718,7 +718,7 @@ vi:
       address_locality: "Thành phố"
       address_region: Bang
       date_of_birth: "Ngày sinh"
-      ssn: ~
+      ssn: SSN
       routing_number: ~
       account_number: ~
       save: Lưu
@@ -1908,9 +1908,9 @@ vi:
         address_title: "Địa chỉ"
         remove_title: Xóa
         remove_confirmation: "Xác nhận xóa địa chỉ email này ?"
-        receive_notifications_title_desktop: ~
-        receive_notifications_title_mobile: ~
-        receive_notifications_new_title_mobile: ~
+        receive_notifications_title_desktop: "Nhận thông báo"
+        receive_notifications_title_mobile: "Nhận thông báo"
+        receive_notifications_new_title_mobile: "Nhận thông báo"
         add_new_with_plus: "Thêm một địa chỉ email mới"
         add_new_cancel: "Hủy bỏ"
         confirmation_title_mobile: "Xác nhận"
