Moved final dot in sentence to parent translation key.

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -817,8 +817,8 @@ en:
       show_thread: "Show conversation"
     branding:
       powered_by: "%{service_name} is powered by the %{sharetribe_link} marketplace platform."
-      create_own: "Want to create your own online marketplace website like %{service_name}? %{learn_more}"
-      learn_more: "Learn more."
+      create_own: "Want to create your own online marketplace website like %{service_name}? %{learn_more}."
+      learn_more: "Learn more"
     braintree_account_approved:
       account_ready: "You are ready to receive payments"
       message: "Your payment information has been confirmed and you are now ready to receive payments in %{service_name}."
@@ -1227,8 +1227,8 @@ en:
       admin: "%{service_name} admin panel"
     branding:
       powered_by: "%{service_name} is powered by the %{sharetribe_link} marketplace platform."
-      create_own: "Want to create your own online marketplace website like %{service_name}? %{learn_more}"
-      learn_more: "Learn more."
+      create_own: "Want to create your own online marketplace website like %{service_name}? %{learn_more}."
+      learn_more: "Learn more"
     no_tribe:
       inbox: Inbox
       settings: Settings
