--- a/config/locales/onboarding/de.yml
+++ b/config/locales/onboarding/de.yml
@@ -5,38 +5,38 @@ de:
         guide:
           cover_photo:
             title: "Schritt 3: Titelbild hinzufügen"
-            description: "Die Qualität deines Titelbildes kann es stark beeinflussen, ob neue Kunden dein Marktplatz beitreten oder nicht."
+            description: "Die Qualität Deines Titelbildes kann es stark beeinflussen, ob neue Kunden Deinem Marktplatz beitreten oder nicht."
             info_image_alt: "Ein Screenshot von einem Homepage mit einem großen Titelbild"
             add_your_own: "Titelbild hinzufügen"
             advice:
-              content1: "Du solltest %{link} lesen, da erzählen wir wo du gute, frei wendbare Bilder finden kannst. Leider ist die Anleitung zur Zeit nur auf Englisch vorhanden."
+              content1: "Du solltest %{link} lesen, wo wir erzählen wo Du gute, frei wendbare Bilder finden kannst. Leider ist die Anleitung zur Zeit nur auf Englisch vorhanden."
               content2: "Achtung: Das Foto wird auf die Größe von %{width}x%{height} Pixel geändert. Wenn das Foto höher ist, werden die Ober- und Unterteile abgeschnitten."
-              link: "diese Anleitung"
+              link: "unsere Anleitung"
               alt: "Wie bekomme ich gut aussehende Titelbilder, Logos, Favicons, Profil- und Eintragsbilder? (Englisch)"
           filter:
             title: "Schritt 4: Eintragsfelder und Filter hinzufügen"
             description:
-              content: "Eintragsfelder definieren die Struktur deines Marktplatzes. Wenn du zum Beispiel einen Markplatz für gebrauchte Schuhe erstellen willst, solltest du ein Feld für die Schuhgröße hinzufügen. Der Verkäufer muss dann die Schuhgröße eingeben, wenn er einen Eintrag für Schuhe erstellen will. Wenn du es deinen Kunden erlauben willst, dass sie Einträge anhand der Schuhgröße filtern können, kannst du %{display_on_homepage} beim Hinzufügen des Feldes auswählen."
+              content: "Eintragsfelder definieren die Struktur Deines Marktplatzes. Wenn Du zum Beispiel einen Markplatz für gebrauchte Schuhe erstellen willst, solltest Du ein Feld für die Schuhgröße hinzufügen. Der Verkäufer muss dann die Schuhgröße eingeben, wenn er einen Eintrag für Schuhe erstellen will. Wenn Du es Deinen Kunden erlauben willst, dass sie Einträge anhand der Schuhgröße filtern können, kannst Du %{display_on_homepage} beim Hinzufügen des Feldes auswählen."
               display_on_homepage: "Als Filter auf der Homepage anzeigen"
             info_image_alt: "Ein Screenshot von der 'Eintragsfelder & Filter' -Seite"
             add_fields_and_filters: "Felder und Filter hinzufügen"
             advice:
-              content: "Felder sind ziemlich Nützlich, aber %{not_too_many_link}. Zu viele Filter können deine Kunden überwältigen, und jeder Filter ist ein zusätzliches Feld, das deine Anbieter ausfüllen müssen."
-              not_too_many_link: "du solltest nicht zu viele hinzufügen"
+              content: "Felder sind ziemlich Nützlich, aber %{not_too_many_link}. Zu viele Filter können Deine Kunden überwältigen, und jeder Filter ist ein zusätzliches Feld, das Deine Anbieter ausfüllen müssen."
+              not_too_many_link: "Du solltest nicht zu viele hinzufügen"
           invitation:
             title: "Schritt 7: Benutzer einladen"
             description:
-              content: "Bist du damit zufrieden, wie dein Marktplatz aussieht und funktioniert? Vielleicht %{preview_link}? Wenn du bereit bist, lass uns Benutzer einladen!"
+              content: "Bist Du damit zufrieden, wie Dein Marktplatz aussieht und funktioniert? Vielleicht willst Du %{preview_link}? Wenn Du bereit bist, lass uns Benutzer einladen!"
               preview_link: "noch einmal vorschauen"
               preview_link_alt: "Vorschau anzeigen"
             info_image_alt: "Benutzer-Darstellung"
             invite_users: "Benutzer einladen"
-            advice: "Du kannst zuerst deine Freunde einladen, und Feedback von ihnen sammeln."
+            advice: "Du kannst zuerst Deine Freunde einladen, und Feedback von ihnen sammeln."
           listing:
             title: "Schritt 6: Deinen ersten Eintrag erstellen"
-            description: "Einträge sind der Inhalt deines Marktplatzes: Die Waren oder Dienstleistungen, die deine Anbieter anbieten. Du kannst einen neuen Eintrag erstellen, damit du den Prozess kennen lernst und dein Marktplatz nicht so leer aussieht!"
+            description: "Einträge sind der Inhalt Deines Marktplatzes: Die Waren oder Dienstleistungen, die Deine Anbieter anbieten. Du kannst einen neuen Eintrag erstellen, damit Du den Prozess kennen lernst und Dein Marktplatz nicht so leer aussieht!"
             info_image_alt: "Ein Screenshot von der 'Neuen Eintrag hinzufügen' -Seite"
-            post_your_first_listing: "Deinen ersten Eintrag erstellen"
+            post_your_first_listing: "Deinen ersten Eintrag hinzufügen"
             advice:
               content: "Es ist einfach, einen Eintrag zu entfernen: einfach auf den Eintrag klicken und %{close_listing} auswählen."
               close_listing: "Eintrag schließen"
@@ -49,8 +49,8 @@ de:
             invitation: "Benutzer einladen"
           paypal:
             title: "Schritt 5: Zahlungssystem einrichten"
-            description_p1: "Wenn deine Anbieter Zahlungen für ihre Waren oder Dienstleistungen annehmen können sollten, solltest du dein PayPal-konto verbinden (du bekommst eine Provision für jede Transaktion). Sobald du das Konto verbunden hast, kannst du den Mindestbetrag einer Transaktion und deine Transaktionsgebühr feststellen."
-            description_p2: "Wenn du willst, kannst du Online-Zahlungen auch fürs Erste deaktivieren."
+            description_p1: "Wenn Deine Anbieter Zahlungen für ihre Waren oder Dienstleistungen annehmen können sollten, solltest Du Dein PayPal-konto verbinden (Du bekommst eine Provision für jede Transaktion). Sobald Du das Konto verbunden hast, kannst Du den Mindestbetrag einer Transaktion und Deine Transaktionsgebühr feststellen."
+            description_p2: "Wenn Du willst, kannst Du Online-Zahlungen auch fürs Erste deaktivieren."
             info_image_alt: "Ein Screenshot von der 'Zahlungssystem' -Seite"
             disable_payments: "Zahlungen deaktivieren"
             setup_payments: "Zahlungen einrichten"
@@ -61,30 +61,30 @@ de:
               disable_payments_alt: "Wie man Zahlungen deaktiviert oder kostenlose Einträge auf den Marktplatz erstellt (Englisch)"
           slogan_and_description:
             title: "Schritt 2: Slogan & Beschreibung hinzufügen"
-            description: "Der Slogan und die Beschreibung zeigen neue Benutzer, was dein Marktplatz anbietet. Das sehen sie als erstes wenn sie deinen Marktplatz ansehen, also sollten sie kurz aber auch beschreibend sein."
+            description: "Der Slogan und die Beschreibung zeigen neue Benutzer, was Dein Marktplatz anbietet. Das sehen sie als erstes wenn sie Deinen Marktplatz ansehen, also sollten sie kurz aber auch beschreibend sein."
             info_image_alt: "Ein Screenshot von dem Homepage mit Slogan und Beschreibung."
             add_your_own: "Slogan & Beschreibung hinzufügen"
             advice:
-              content: "Verwende deinen Slogan um deinen Marktplatz schnell zu beschreiben. %{food_from_locals_slogan} oder %{guitar_lessons_slogan} sind gute Beispiele. Mit der Beschreibung kannst du ergänzen, wofür dein Marktplatz nützlich ist. %{food_from_locals_description} oder %{guitar_lessons_description} sind gute Beispiele."
+              content: "Verwende Deinen Slogan um Deinen Marktplatz schnell zu beschreiben. %{food_from_locals_slogan} oder %{guitar_lessons_slogan} sind gute Beispiele. Mit der Beschreibung kannst Du ergänzen, wofür Dein Marktplatz nützlich ist. %{food_from_locals_description} oder %{guitar_lessons_description} sind gute Beispiele."
               food_from_locals_slogan: "\"Regionale lebensmittel kaufen\""
               guitar_lessons_slogan: "\"Gitarrenunterricht von einem Profi\""
-              food_from_locals_description: "\"Durch FoodMarket kannst du einfach Produkte direkt von einheimischen Anbietern kaufen\""
+              food_from_locals_description: "\"Durch FoodMarket kannst Du einfach Produkte direkt von einheimischen Anbietern kaufen\""
               guitar_lessons_description: "\"GuitarPro ist der beste Ort um Musiklehrer zu vergleichen\""
           status_page:
-            title: "Willkommen auf deinen Marktplatz, %{name}"
+            title: "Willkommen auf Deinen Marktplatz, %{name}"
             title_done: "Alles fertig!"
-            description_p1: "Um deinen Marktplatz einzurichten, gibt es einige wichtige Schritte die du nehmen solltest. Die siehst du unten."
-            description_p2: "Sobald du fertig bist, ist dein Marktplatz bereit für die ersten Kunden!"
+            description_p1: "Um Deinen Marktplatz einzurichten, gibt es einige wichtige Schritte die Du nehmen solltest. Die siehst Du unten."
+            description_p2: "Sobald Du fertig bist, ist Dein Marktplatz bereit für die ersten Kunden!"
             congratulation_p1:
-              content: "Du hast es geschafft! Dein Marktplatz ist eingerichtet. Das ist aber nur der Anfang. Du hast nur ein kleines Teil von den Anpassungsmöglichkeiten von Sharetribe gesehen. Um mehr Informationen über die Anpassung deines Marktplatzes zu bekommen, solltest du %{knowledge_base_link} ansehen. Die meisten Artikel sind leider zur Zeit nur auf Englisch verfügbar."
+              content: "Du hast es geschafft! Dein Marktplatz ist eingerichtet. Das ist aber nur der Anfang. Du hast nur ein kleines Teil von den Anpassungsmöglichkeiten von Sharetribe gesehen. Um mehr Informationen über die Anpassung Deines Marktplatzes zu bekommen, solltest Du %{knowledge_base_link} ansehen. Die meisten Artikel sind leider zur Zeit nur auf Englisch verfügbar."
               knowledge_base_link: "unseren Knowledge Base"
               knowledge_base_alt: "knowledge base"
             congratulation_p2:
-              content: "Wenn du mehr darüber lernen willst, wie man ein erfolgreiches Marktplatz-Geschäft führt, empfehlen wir den Artikel %{marketplace_guide_link}. Leider ist dieser Artikel auch zur Zeit nur auf Englisch verfügbar."
+              content: "Wenn Du mehr darüber lernen willst, wie man ein erfolgreiches Marktplatz-Geschäft führt, empfehlen wir den Artikel %{marketplace_guide_link}. Leider ist dieser Artikel auch zur Zeit nur auf Englisch verfügbar."
               marketplace_guide_link: "Leitfaden für das erfolgreiche Aufbauen von Online Marktplatz-Geschäften"
               marketplace_guide_alt: "link to marketplace academy"
             congratulation_p3:
-              content: "Wenn du fragen hast, kannst du gerne %{contact_support_link} kontaktieren, wir sind für dich da!"
+              content: "Wenn Du fragen hast, kannst Du gerne %{contact_support_link} kontaktieren, wir sind für Dich da!"
               contact_support_link: "unser Support-Team"
               contact_support_title: "Support"
             create_your_marketplace: "Deinen Marktplatz erstellen"
@@ -109,30 +109,30 @@ de:
       popup:
         slogan_and_description:
           title: "Ausgezeichnet! Aufgabe erledigt!"
-          body: "Fantastisch! Als nächstes: Der Slogan und die Beschreibung sind der beste Weg, deinen neuen Benutzern zu zeigen, worum dein Marktplatz geht."
-          button: "Schreibe deine eigenen!"
+          body: "Fantastisch! Als nächstes: Der Slogan und die Beschreibung sind der beste Weg, Deinen neuen Benutzern zu zeigen, worum Dein Marktplatz geht."
+          button: "Schreibe Deine eigenen!"
         cover_photo:
           title: "Sehr gut! Aufgabe erledigt!"
-          body: "Gut gemacht, lass uns weitermachen! Ein gutes Titelbild hat einen sehr großen Einfluss auf den ersten Eindruck von deinem Marktplatz für neue Kunden. Es ist an der Zeit, dein eigenes Titelbild hinzuzufügen!"
+          body: "Gut gemacht, lass uns weitermachen! Ein gutes Titelbild hat einen sehr großen Einfluss auf den ersten Eindruck von Deinem Marktplatz für neue Kunden. Es ist an der Zeit, Dein eigenes Titelbild hinzuzufügen!"
           button: "Titelbild hochladen"
         filter:
           title: "Sieht gut aus!"
-          body: "Nun, konzentrieren wir uns auf die Funktionalität ein wenig. Eintragsfelder und Filter strukturieren deinen Marktplatz, und helfen deinen Kunden das zu finden, wonach sie suchen."
+          body: "Nun, konzentrieren wir uns auf die Funktionalität ein wenig. Eintragsfelder und Filter strukturieren Deinen Marktplatz, und helfen Deinen Kunden das zu finden, wonach sie suchen."
           button: "Felder & Filter hinzufügen"
         paypal:
           title: "Gut gemacht!"
-          body: "Als nächstes solltest du das Bezahlungssystem für deinen Marktplatz einrichten! Um deinen Benutzern das Annehmen von Online-Zahlungen zu erlauben, solltest du dein PayPal-Konto verbinden. Alternativ kannst du auch Online-Bezahlungen fürs erste deaktivieren."
+          body: "Als nächstes solltest Du das Bezahlungssystem für Deinen Marktplatz einrichten! Um Deinen Benutzern das Annehmen von Online-Zahlungen zu erlauben, solltest Du Dein PayPal-Konto verbinden. Alternativ kannst Du auch Online-Bezahlungen fürs erste deaktivieren."
           button: "Zahlungssystem einrichten"
         listing:
           title: "Gute Arbeit!"
-          body: "Die Grundlagen deines Marktplatzes sind jetz eingerichtet, aber es sieht hier noch etwas leer aus. Es ist an der Zeit, den ersten Eintrag auf deinen Marktplatz hinzuzufügen."
-          button: "Deinen ersten Eintrag erstellen"
+          body: "Die Grundlagen Deines Marktplatzes sind jetz eingerichtet, aber es sieht hier noch etwas leer aus. Es ist an der Zeit, den ersten Eintrag auf Deinen Marktplatz hinzuzufügen."
+          button: "Deinen ersten Eintrag hinzufügen"
         invitation:
-          title: "...und jetzt zum letzten Schritt - deinen Marktplatz veröffentlichen!"
-          body: "Bist du mit allem zufrieden? Dann lass uns Benutzer einladen!"
+          title: "...und jetzt zum letzten Schritt - Deinen Marktplatz veröffentlichen!"
+          body: "Bist Du mit allem zufrieden? Dann lass uns Benutzer einladen!"
           button: "Benutzer einladen"
         all_done:
-          title: "Hervorragend - du hast es geschafft!"
-          body: "Fantastisch, du hast es geschafft! Dein Marktplatz ist jetz eingerichtet. Das ist aber nur der Anfang. Wir sind für dich da, und wir helfen dir gerne bei jedem Schritt deiner Reise."
+          title: "Hervorragend - Du hast es geschafft!"
+          body: "Fantastisch, Du hast es geschafft! Dein Marktplatz ist jetz eingerichtet. Das ist aber nur der Anfang. Wir sind für Dich da, und wir helfen Dir gerne bei jedem Schritt Deiner Reise."
           button: "Siehe die nächsten Schritte"
         button_later: "Ich werde es später tun, danke"
